# folder-sync-sentinel

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  FolderSelect.tsx  FolderSyncApp.tsx  FrequencySlider.tsx  StatusIndicator.tsx  SyncControls.tsx
src/pages/: Index.tsx
