
[package]
name = "folder-sync-sentinel"
version = "0.1.0"
description = "A sleek, minimalist folder synchronization application"
authors = ["Lovable"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "5.1.0"
notify-debouncer-mini = "0.3.0"
walkdir = "2.3.3"
tokio = { version = "1.28.2", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
